Actualización Build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - Master
       - Develop
+      - Feature-CapaPresentacion
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
