PantallaLogin sin funcionalidad

--- a/RevivingSotware/presentacion/.gitignore
+++ b/RevivingSotware/presentacion/.gitignore
@@ -3,3 +3,17 @@
 /PantallaJefeGabineteVicerrectorado.class
 /PantallaLogin.class
 /PantallaMatriculación.class
+/PantallaLogin2$1.class
+/PantallaLogin2.class
+/PantallaLogin$1.class
+/PantallaLogin$2.class
+/PantallaLogin$3$1.class
+/PantallaLogin$3.class
+/PantallaLogin$2$1.class
+/PantallaConectar$1.class
+/PantallaConectar$2.class
+/PantallaConectar.class
+/PantallaLogin$4$1.class
+/PantallaLogin$4.class
+/PantallaLogin$5.class
+/PantallaLogin$6.class
