--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - Master
-      - Develop
-      - Feature-CapaPresentacion
+      - Develop-*
+      - Feature-CapaPresentacion-*
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
