--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,4 +37,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B -X -f C:\Users\Usuario\git\PROYECTOS_GIT\RevivingSoftware\RevivingSotware\Pom.xml verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ivaann17_RevivingSoftware
+        run: mvn -B -X -f /Users/Usuario/git/PROYECTOS_GIT/RevivingSoftware/RevivingSotware/Pom.xml verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ivaann17_RevivingSoftware
