--- a/RevivingSotware/Pom.xml
+++ b/RevivingSotware/Pom.xml
@@ -9,9 +9,14 @@
 	<url>https://github.com/ivaann17/RevivingSoftware.git</url>
 
 	<properties>
-  <sonar.organization>ivaann17</sonar.organization>
-  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-</properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<sonar.organization>ivaann17</sonar.organization>
+		<sonar.projectKey>ivaann17_RevivingSoftware</sonar.projectKey>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		
+	</properties>
 
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/JUnit/JUnit -->
