--- a/RevivingSotware/Pom.xml
+++ b/RevivingSotware/Pom.xml
@@ -15,6 +15,7 @@
 		<sonar.organization>ivaann17</sonar.organization>
 		<sonar.projectKey>ivaann17_RevivingSoftware</sonar.projectKey>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.login>254b489678c934f33ccdbc15b8ae99fa1ee2f851</sonar.login>
 		
 	</properties>
 
