PantallaDireccionCursos (sin funcionalidad).

--- a/RevivingSotware/presentacion/.gitignore
+++ b/RevivingSotware/presentacion/.gitignore
@@ -17,3 +17,11 @@
 /PantallaLogin$4.class
 /PantallaLogin$5.class
 /PantallaLogin$6.class
+/PantallaDireccionCursos$1.class
+/PantallaDireccionCursos2$1.class
+/PantallaDireccionCursos2.class
+/PantallaConectar$PanelInicio$1.class
+/PantallaConectar$PanelInicio.class
+/PantallaConectar$panelConectar$1.class
+/PantallaConectar$panelConectar.class
+/PantallaLogin$5$1.class
