--- a/RevivingSotware/presentacion/.gitignore
+++ b/RevivingSotware/presentacion/.gitignore
@@ -25,3 +25,13 @@
 /PantallaConectar$panelConectar$1.class
 /PantallaConectar$panelConectar.class
 /PantallaLogin$5$1.class
+/PantallaDireccionCursos$2.class
+/PantallaRealizarPropuestas$1.class
+/PantallaRealizarPropuestas.class
+/PantallaRealizarPropuesta$DateLabelFormatter.class
+/PantallaRealizarPropuesta.class
+/PantallaRealizarPropuestas$DateLabelFormatter.class
+/PantallaRealizarPropuestas$2.class
+/PantallaRealizarPropuestas$3.class
+/PantallaRealizarPropuestas$4.class
+/PantallaRealizarPropuestas$5.class
