Control de errores PantallaRealizarPropuestas

--- a/RevivingSotware/presentacion/.gitignore
+++ b/RevivingSotware/presentacion/.gitignore
@@ -35,3 +35,12 @@
 /PantallaRealizarPropuestas$3.class
 /PantallaRealizarPropuestas$4.class
 /PantallaRealizarPropuestas$5.class
+/PantallaRealizarPropuestas$6.class
+/PantallaRealizarPropuestas$7.class
+/PantallaRealizarPropuestas$8.class
+/PantallaRealizarPropuestas$10.class
+/PantallaRealizarPropuestas$9.class
+/PantallaRealizarPropuestas$11.class
+/PantallaLogin$6$1.class
+/PantallaLogin$7$1.class
+/PantallaLogin$7.class
