PantallaEstudiante y PantallaMatriculacion (Sin funcionalidad)

--- a/RevivingSotware/presentacion/.gitignore
+++ b/RevivingSotware/presentacion/.gitignore
@@ -44,3 +44,11 @@
 /PantallaLogin$6$1.class
 /PantallaLogin$7$1.class
 /PantallaLogin$7.class
+/PantallaMatriculacion.class
+/PantallaAlumno$1.class
+/PantallaAlumno.class
+/PantallaEstudiante.class
+/PantallaEstudiante$1.class
+/PantallaEstudiante$2.class
+/PantallaMatriculacion$1.class
+/PantallaMatriculacion$2.class
