--- a/RevivingSotware/presentacion/.gitignore
+++ b/RevivingSotware/presentacion/.gitignore
@@ -52,3 +52,38 @@
 /PantallaEstudiante$2.class
 /PantallaMatriculacion$1.class
 /PantallaMatriculacion$2.class
+/PantallaEmpleadosVicerrectorado$1.class
+/PantallaEmpleadosVicerrectorado$2.class
+/PantallaMatriculacion$3.class
+/PantallaMatriculacion$4.class
+/PantallaEvaluarCurso$1.class
+/PantallaEvaluarCurso.class
+/PantallaEvaluarCurso$2.class
+/PantallaEvaluarCurso$3.class
+/PantallaEvaluarCurso$4.class
+/PantallaJefeGabineteVicerrectorado$1.class
+/PantallaJefeGabineteVicerrectorado$2.class
+/PantallaEstadisticasCursos$1.class
+/PantallaEstadisticasCursos.class
+/PantallaEstadisticasCursos$2.class
+/PantallaDatosAlumno$1.class
+/PantallaDatosAlumno.class
+/PantallaDatosAlumno$2.class
+/PantallaDatosAlumno$3.class
+/PantallaDatosAlumno$4.class
+/PantallaDatosAlumno$5.class
+/PantallaDatosAlumno$6.class
+/PantallaDatosAlumno$7.class
+/PantallaDatosAlumno$8.class
+/PantallaDatosAlumno$9.class
+/PantallaDatosAlumno$DateLabelFormatter.class
+/PantallaMisCursos$1.class
+/PantallaMisCursos.class
+/PantallaMisCursos$2.class
+/PantallaMisCursos$3.class
+/PantallaMisCursos$4.class
+/PantallaEstudiante$3.class
+/PantallaPropuestasRealizadas$1.class
+/PantallaPropuestasRealizadas.class
+/PantallaPropuestasRealizadas$2.class
+/PantallaDireccionCursos$3.class
