--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,7 @@
 name: SonarCloud
 on:
   push:
-    branches:
-      - Master
-      - Develop
-      - Feature-CapaPresentacion
+    branches: ['*']
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -36,4 +33,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B -fn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ivaann17_RevivingSoftware
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ivaann17_RevivingSoftware
