--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,8 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/Pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      - name: Change to directory with pom.xml
+        run: cd RevivingSoftware/RevivingSoftware/
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
