--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: SonarCloud
 on:
   push:
-    branches: ['*']
+    branches:
+      - Master
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -29,8 +30,6 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/Pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Change to directory with pom.xml
-        run: cd RevivingSoftware/RevivingSoftware/
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
