--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,8 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/Pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      - name: Change to directory with pom.xml
+        run: cd RevivingSoftware/RevivingSotware
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
