--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: SonarCloud
 on:
   push:
     branches:
+      - Develop
+      - Feature-BBDD
       - Master
   pull_request:
     types: [opened, synchronize, reopened]
