--- a/RevivingSotware/.classpath
+++ b/RevivingSotware/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="jgoodies-common-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Usuario/.m2/repository/mysql/mysql-connector-java/8.0.27/mysql-connector-java-8.0.27.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
