--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: SonarCloud
 on:
   push:
     branches:
-      - Develop
-      - Feature-BBDD-*
       - Master
+      - Develop
+      - Feature-BBDD
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
