--- a/pom.xml
+++ b/pom.xml
@@ -41,22 +41,21 @@
 
 
 
- <build>
-    <sourceDirectory>presentacion</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <release>14</release>
-        </configuration>
-      </plugin>
-         <plugin>
+      <build>
+  <plugins>
+    <plugin>
       <groupId>org.sonarsource.scanner.maven</groupId>
       <artifactId>sonar-maven-plugin</artifactId>
       <version>3.7.0.1746</version>
+      <configuration>
+        <sonar.sources>RevivingSotware</sonar.sources>
+        <sonar.java.source>14</sonar.java.source>
+        <sonar.java.target>14</sonar.java.target>
+      </configuration>
     </plugin>
-    </plugins>
+  </plugins>
+</build>
+
   </build>  
 	<reporting>
 		<plugins>
