--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,19 @@
         <sonar.java.target>14</sonar.java.target>
       </configuration>
     </plugin>
-  </plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>presentacion.PantallaConectar</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+    </plugins>
 </build> 
 	<reporting>
 		<plugins>
