--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                 <archive>
                     <manifest>
 		   	<addClasspath>true</addClasspath>
-                        <mainClass>RevivingSotware.presentacion.PantallaConectar</mainClass>
+                        <mainClass>src.presentacion.PantallaConectar</mainClass>
                     </manifest>
                 </archive>
             </configuration>
