--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>8.0.27</version>
     </dependency>
+      <dependency>
+    <groupId>org.jasypt</groupId>
+    <artifactId>jasypt</artifactId>
+    <version>1.9.3</version>
+</dependency>
 </dependencies>
 
 
