--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ on:
       - Develop
       - Feature-BBDD
       - Feature-Calidad
+      - Feature-Testing
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
